; ModuleID = '/home/carl/AnghaBench/i3/src/extr_ewmh.c_ewmh_update_client_list_stacking.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_ewmh.c_ewmh_update_client_list_stacking.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@conn = common dso_local global i32 0, align 4
@XCB_PROP_MODE_REPLACE = common dso_local global i32 0, align 4
@root = common dso_local global i32 0, align 4
@A__NET_CLIENT_LIST_STACKING = common dso_local global i32 0, align 4
@XCB_ATOM_WINDOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ewmh_update_client_list_stacking(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @conn, align 4
  %6 = load i32, i32* @XCB_PROP_MODE_REPLACE, align 4
  %7 = load i32, i32* @root, align 4
  %8 = load i32, i32* @A__NET_CLIENT_LIST_STACKING, align 4
  %9 = load i32, i32* @XCB_ATOM_WINDOW, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @xcb_change_property(i32 %5, i32 %6, i32 %7, i32 %8, i32 %9, i32 32, i32 %10, i32* %11)
  ret void
}

declare dso_local i32 @xcb_change_property(i32, i32, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
